# chem-277b-group-project

./: .gitignore  README.md  pyproject.toml  run.sh  test.sh
app/: app.py  util.py
app/static/: script.js  styles.css
app/templates/: base.html
data/: compliance_and_engineering_constants.csv  connectivity_compliance_matrices.pkl  engineering_constants.csv
models/: models.py
notebooks/: EDA.ipynb  brennan_gnn_new_inputs_parameter_sweep.ipynb  brennan_gnn_v2.ipynb  brennan_gnn_v2_reduced_connectivity.ipynb  data_matrix_preprocessing.ipynb  dry_run.ipynb  gnn_mat_prop.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  brennan_gnn_v2-checkpoint.ipynb
notebooks/archive/: brennan_gnn_new_inputs.ipynb  brennan_gnn_new_inputs_parameter_sweep.ipynb  brennan_gnn_v2.ipynb  brennan_gnn_v2_reduced_connectivity.ipynb  model_v1.ipynb  riya_att_REALDATA.ipynb
notebooks/saved_models/: gnn_attention_checkpoint.pth
notebooks/saved_models/backup/: gnn_gcn_checkpoint.pth
scripts/: gnn_attention_plain.py  gnn_attention_training.py  model_evaluation.py  property_extractor.py  riya_att_REALDATA.ipynb
utils/: evaluation.py  processing.py  training.py
utils/archive/: gnn_attention_plain.py  model_evaluation.py
utils/tests/: test_evaluation.py  test_processing.py  test_training.py
