[project]
name = "chem-277b-group-project"
version = "0.1.0"
description = "Final project for Chem 277B: Machine Learning Algorithms (Fall 2025). Developing GNNs for predicting compliance matrices and material properties from node group connectivity graphs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
